--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,20 @@ Home
 {% block main_content %}
 
     <div class = "sect sectOne"><div class="position-fixed mr-5 mt-5" style="right: 0;"><a href="https://github.com/shivaShankarPuvvada"><img src="{% static 'img/github.png' %}" alt="github logo" height="50"></a></div></div>
-    <div class = "subSect partOne"><p>Hi, this is Shiva Shankar, web developer. I would like to help people with the what I know and what I am about to know. That includes computers and electroins. If you are a nerd, let your knowldge useful to the people.</p></div>
+    <div class = "subSect partOne">
+        <div class="row">
+            <div class="col-5"><img class="pythons" src="{% static 'img/python.png' %}" alt="python-django" ></div>
+            <div class="col-5"><p>Hi, this is Shiva Shankar, Pyton Web Developer. I would like to help people with the what I know and what I am about to know. That includes computers and electroins. If you are a nerd, let your knowldge useful to the people.</p></div>
+        </div>
+    </div>
     <div class = "sect sectTwo"></div>
-    <div class = "subSect partTwo"><p>The elephants gestation period is 22 months longer than any other land animal in the world. A new born human baby weighs an average of 7 pounds while a new born elephant baby can weigh up to 260 pounds! The baby can stand up shortly after being born.</p></div>	
+    <div class = "subSect partTwo">
+        <div class="row">
+            <div class="col-5"><img class="markets" src="{% static 'img/market.png' %}" alt="python-django" ></div>
+            <div class="col-5"><p>Hi, this is Sainath, Software Developer at IBM. I would like to make India great again by providing better education for children, especially in remote areas. I was also fond of clean and green environment and I am using my skills to recycle the waste in to useful product.</p></div>
+        </div>
+        
+    </div>	
     <div class = "sect sectThree"></div>
 
 {% endblock %}
